# justconnect

./: README.md  load_sample_data.py  package-lock.json  package.json  setup-database.sql  vercel.json
jft-backend/: pyproject.toml
jft-backend/app/: main.py
jft-frontend/: .env  index.html  package-lock.json  package.json
jft-frontend/src/: App.tsx
justconnect-backend/: pyproject.toml
justconnect-backend/app/: main.py
justconnect-frontend/: .env  index.html  package-lock.json  package.json  vercel.json
justconnect-frontend/src/: App.tsx  index.css
justconnect-frontend/src/components/: AppLayout.tsx  JustconnectReportGenerator.tsx  ReportDisplay.tsx  SMSConfig.tsx  V2Dashboard.tsx
justconnect-frontend/src/components/v2/: ExcelUploader.tsx  FieldObservationsPanel.tsx  MissedOrdersPanel.tsx  RangeOpportunitiesPanel.tsx
justconnect-frontend/src/lib/: mockData.ts
justconnect-frontend/src/pages/: Index.tsx  SharedReport.tsx
src/app/: layout.tsx  page.tsx
src/app/api/init-db/: route.ts
src/app/api/test-db/: route.ts
src/app/dashboard/sales-director/: page.tsx
src/app/dashboard/sales-manager/: page.tsx
src/app/dashboard/sales-trader/: page.tsx
src/app/upload/: page.tsx
src/components/ui/: progress.tsx
src/lib/: database.ts  init-database.ts  supabase.ts
