[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.13"}
psycopg = {extras = ["binary"], version = "^3.2.9"}
pandas = "^2.3.0"
openpyxl = "^3.1.5"
python-multipart = "^0.0.20"
requests = "^2.31.0"
boto3 = "^1.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
